[project]
name = "spatialx-transform"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "naot-wong", email = "toan.vong@bioturing.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
]

[project.scripts]
spatialx-transform = "spatialx_transform:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# Derive the package version from the latest git tag (e.g. tag `v1.2.3` →
# version `1.2.3`; commits past a tag become `1.2.4.devN+gSHA`). The version
# is written to `_version.py` at build time so it is available at runtime.
[tool.setuptools_scm]
version_file = "src/spatialx_transform/_version.py"
fallback_version = "0.0.0"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
